2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_link_button_set_uri_hook binding, patch by Michael Terry,
	fixes bug 556638

	* vapi/gtk+-2.0.vapi: regenerated

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add missing sys/wait.h includes, patch by Michael Terry,
	fixes bug 556637

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gnome-keyring-1/:

	Fix gnome_keyring_find_password_sync binding,
	patch by Michael Terry, fixes bug 556636

	* vapi/gnome-keyring-1.vapi: regenerated

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_message_dialog_format_secondary_text binding,
	patch by Michael Terry, fixes bug 556625

	* vapi/gtk+-2.0.vapi: regenerated

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_tree_view_get_cursor binding, patch by Hans Vercammen,
	fixes bug 555972

	* vapi/gtk+-2.0.vapi: regenerated

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/libusb.vapi:

	Add missing [Compact], patch by Matías De la Puente,
	fixes bug 555018

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add g_strcanon, g_object_class_install_property, GToggleNotify,
	and GStringChunk bindings, patch by Yu Feng,
	fixes part of bug 555566

2008-10-17  Roberto Majadas  <telemaco@openshine.com>

	* vapi/tracker-indexer-module-1.0.vapi: Add tracker indexer bindings

2008-10-15  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodememberaccessbinding.vala:

	Fix memory leak when using GObject properties without accessors

2008-10-14  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/vte.vapi: regenerated (for has_construct_function attribute)

2008-10-14  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:

	fix ctype of ToggleActionEntry

	* vapi/gtk+-2.0.vapi: regenerated

2008-10-13  Jürg Billeter  <j@bitron.ch>

	* gobject/valagirwriter.vala:

	Fix indentation of parameters
